{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 11,
  "lineage": "d0f8f07e-a591-cde6-41d3-397f5dded78a",
  "resources": [
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:internet-gateway/igw-06b0c746869225f66",
            "id": "igw-06b0c746869225f66",
            "owner_id": "851725282145",
            "tags": {
              "Name": "dev-vpc-igw"
            },
            "tags_all": {
              "Name": "dev-vpc-igw"
            },
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b0c746869225f66",
            "id": "r-rtb-032e08a727b4da1a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032e08a727b4da1a8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.igw_main",
            "module.dev_vpc.aws_route_table.route_table_public",
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-09a030ff013bb277c",
            "id": "rtb-09a030ff013bb277c",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-032e08a727b4da1a8",
            "id": "rtb-032e08a727b4da1a8",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b26ce41a345e7658",
            "route_table_id": "rtb-09a030ff013bb277c",
            "subnet_id": "subnet-0362a0f9f6539a32b"
          },
          "dependencies": [
            "module.dev_vpc.aws_route_table.route_table_private",
            "module.dev_vpc.aws_subnet.subnet_private",
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0312791c82342335f",
            "route_table_id": "rtb-032e08a727b4da1a8",
            "subnet_id": "subnet-0292957484b1bf8b3"
          },
          "dependencies": [
            "module.dev_vpc.aws_route_table.route_table_public",
            "module.dev_vpc.aws_subnet.subnet_public",
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:security-group/sg-0d7c49063887648c8",
            "description": "Allow inbound HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7c49063887648c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-vpc-sg",
            "name_prefix": "",
            "owner_id": "851725282145",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-0362a0f9f6539a32b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0362a0f9f6539a32b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-private-subnet"
            },
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-0292957484b1bf8b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0292957484b1bf8b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-public-subnet"
            },
            "vpc_id": "vpc-0af318764f6eee4da"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:vpc/vpc-0af318764f6eee4da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0901a0099ca9ac3ad",
            "default_route_table_id": "rtb-00ab370530a8f67a3",
            "default_security_group_id": "sg-0fb3915dc929e2176",
            "dhcp_options_id": "dopt-067ffb70001ab9bb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af318764f6eee4da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ab370530a8f67a3",
            "owner_id": "851725282145",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}